# app/Http/Controllers/ProductController.php
@@ -3,8 +3,12 @@
 namespace App\Http\Controllers;
 
 use App\Data\Requests\Product\ProductFilterData;
-use App\Data\Responses\Product\ProductListData;
+use App\Data\Requests\Product\ProductIdData;
+use App\Data\Responses\Product\List\ProductListData;
+use App\Data\Responses\Product\Show\ProductShowData;
 use App\Services\ProductService;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Response;
 use Illuminate\Pagination\LengthAwarePaginator;
 use OpenApi\Attributes as OA;
@@ -66,8 +70,49 @@ class ProductController extends Controller
     )]
     public function index(ProductFilterData $data): LengthAwarePaginator
     {
-        
         $products = $this->productService->list($data);
+
         return ProductListData::collect($products);
+    }
+
+    #[OA\Get(
+        path: "/api/products/{id}",
+        summary: "Получить карточку товара с вариантами",
+        description: "Возвращает информацию о товаре, его доступные варианты и дерево категорий",
+        tags: ["Products"],
+        parameters: [
+            new OA\Parameter(
+                name: "id",
+                description: "ID товара",
+                in: "path",
+                required: true,
+                schema: new OA\Schema(type: "integer", example: 1)
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: Response::HTTP_OK,
+                description: "Успешное получение товара",
+                content: new OA\JsonContent(ref: '#/components/schemas/ProductShowData')
+            ),
+            new OA\Response(
+                response: Response::HTTP_NOT_FOUND,
+                description: "Товар не найден",
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: "message", type: "string", example: "Product not found")
+                    ]
+                )
+            ),
+        ]
+    )]
+    public function show(int $id): ProductShowData|JsonResponse
+    {
+        try {
+            $productWithVariants = $this->productService->findWithVariants($id);
+            return $productWithVariants;
+        } catch (ModelNotFoundException $e) {
+            return response()->json(['message' => 'Product not found'], Response::HTTP_NOT_FOUND);
+        }
     }
 }
